# elemesholve

./: CGAL_Types.hh  CMakeLists.txt  CalculationProcess.cc  CalculationProcess.hh  CellMatrix.cc  CellMatrix.hh  Doxyfile  EigenSparse.cc  EigenSparse.hh  EndBesselCalc.c  EndBesselCalc.h  FEMesh.cc  FEMesh.hh  FEMesh2.cc  FEMesh2.hh  FEMesh3.cc  FEMesh3.hh  FEMesh3Slice.cc  FEMesh3Slice.hh  GeomDef.cc  GeomDef.hh  GeomSetup.cc  GeomSetup.hh  HDS.hh  MeshSlice.cc  MeshSlice.hh  MeshVis.cc  MeshVis.hh  README  RoundRect.hh  SVGSliceRenderer.cc  SVGSliceRenderer.hh  SimplexMesh.hh  SliceHeader.hh  SparseMatrix.hh  UmfSparse.cc  UmfSparse.hh  ZSliceCylDomain.cc  ZSliceCylDomain.hh  aCORN_EMirror_Geom.cc  (+4 more)
Analytical/: .gitignore  EndBesselCalc.c  EndBesselCalc.h  WireplaneField.c  WireplaneField.h  aCORN_EMirror_Field.c  aCORN_EMirror_Field.h  aCORN_Example.c  aCORN_Integrals.c
Postprocessing/: .gitignore  BrianFields.cc  BrianFields.hh  SVGAnalyticalRenderer.cc  SVGAnalyticalRenderer.hh  SVGGradientAxis.cc  SVGGradientAxis.hh  SVGPixelRenderer.cc  SVGPixelRenderer.hh  SVGSliceRenderer.cc  SVGSliceRenderer.hh  meshtrack.cc  plot_slice.cc
